--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -1,12 +1,14 @@
 @media screen and (min-width:601px) and (max-width:900px) and (orientation:landscape){
+
   .about_us_divider{
     width:0% !important;
     max-width:0% !important
-
   }
+
   .about_us_col--2{
     margin-top:22.5%
   }
+
   .mission_col{
     margin-top:5% !important;
     padding-bottom:2%;
@@ -14,51 +16,56 @@
     max-width: 100% !important;
     width:  100% !important;
   }
+
   .about_us_col{
     flex: 41.666666666% !important;
     max-width: 41.666666666% !important;
     width:  41.666666666% !important;
   }
+
   .what_we_do_description{
-        width: 150% !important;
-        font-size:1.6rem !important;
-  }.about_container{
+    width: 150% !important;
+    font-size:1.6rem !important;
+  }
+
+  .about_container{
     /* position: relative; */
     padding-bottom: 0% !important;
     margin-top: 0% !important;
-text-align: justify !important;
+    text-align: justify !important;
   }
+
   .what_we_do_container{
     margin-top:-5% !important;
   }
+
   .about_title{
     font-size:4rem !important
   }
+
   .about_description{
     font-size:2rem !important;
   }
+
   .what_we_do_col{
     width:55% !important;
     max-width: 55% !important;
     flex:55% !important
   }
+
   .what_we_do_title{
     width:100% !important;
     font-size:2.5rem;
   }
+
   .link_col{
-  width:45% !important;
-  max-width:45% !important;
-  flex:45% !important;
+    width:45% !important;
+    max-width:45% !important;
+    flex:45% !important;
   }
+
 }
 
-
-
-
-html{
-    box-sizing: border-box
-}
 .about_container{
   position: relative;
   padding-bottom:5%;
@@ -74,7 +81,7 @@ html{
       rgba(56, 182, 255, .7)),
       url("./../images/wet.png");
   background-size: cover;
-padding-bottom:10%;
+  padding-bottom:10%;
 }
 
 .value_box:hover{
@@ -85,8 +92,8 @@ padding-bottom:10%;
 
 .value_box:hover p{
   color:white !important;
-
 }
+
 .value_box:hover .value_icon{
       background-image: linear-gradient(
       to right bottom,
@@ -103,12 +110,14 @@ padding-bottom:10%;
 .what_we_do_description{
   font-size:2rem;
 }
+
 .value_box_title{
   font-family:"Montserrat";
   font-weight: 600;
   font-size:2rem;
   display: block;
 }
+
 .value_box_subtitle{
   font-family:"Montserrat";
   font-weight: 400;
@@ -117,6 +126,7 @@ padding-bottom:10%;
   display: inline-block;
   margin-top:5%;
 }
+
 .value_box{
   padding:6%;
   transform: scale(1) translateY(0px);
@@ -131,6 +141,7 @@ padding-bottom:10%;
 .normal_link{
   display: inline;
 }
+
 .value_icon{
   font-size:6rem;
   background-image: linear-gradient(
@@ -138,27 +149,28 @@ padding-bottom:10%;
       rgba(37, 98, 159, .7),
       rgba(56, 182, 255, .7)),
       url("./../images/wet.png");
-      color:transparent;
-      -webkit-background-clip: text;
-      display:inline-block;
-      transition: all .5;
+   color:transparent;
+  -webkit-background-clip: text;
+  display:inline-block;
+  transition: all .5;
   display: inline-block;
 }
 
 .what_we_do_container{
   position:relative;
-  background-image:linear-gradient(to right,rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, .7),rgba(0, 35, 50, .4)),url('./../images/what_we_do_new.png');
+  background-image:linear-gradient(to right,rgba(0, 35, 50, 1),
+  rgba(0, 35, 50, 1),
+  rgba(0, 35, 50, .7),rgba(0, 35, 50, .4)),
+  url('./../images/what_we_do_new.png');
   background-size:cover;
   padding:10% 0;
   padding-top:5%;
-
-
 }
 
 a:hover{
-
   pointer-events: none;
 }
+
 .what_we_do_col{
    padding-left:5%;
 }
@@ -167,12 +179,12 @@ a:hover{
   color:white;
   font-size:7rem;
   text-align:left;
-   font-family:"Akrobat";
-   font-weight:bold
-
+  font-family:"Akrobat";
+  font-weight:bold
 }
+
 .what_we_do_link{
-  border-bottom:orangered 1px solid;
+   border-bottom:orangered 1px solid;
    padding-top:5%;
    font-family:"Akrobat";
    width:80%;
@@ -180,27 +192,28 @@ a:hover{
    color:white;
    text-align:center;
 }
+
 .what_we_do_description{
   color:white ;
   text-align:left;
   font-size: 2rem;
   width:120%;
-   padding-top:5%;
-   font-family: "Montserrat";
-   font-weight: 300;
+  padding-top:5%;
+  font-family: "Montserrat";
+  font-weight: 300;
 }
+
 .about_title{
   color:white;
   text-align:center;
   font-size:6rem;
-
   font-family:"Montserrat";
   font-weight: 700;
 }
+
 .value_box{
   height:100%;
 }
-
 
 .about_description{
   font-family:"Montserrat";
@@ -209,30 +222,31 @@ a:hover{
   padding-top:5%;
   font-size:2.2rem;
   text-align: center;
-
 }
+
 .about_value_row{
   padding:2.5% 0%;
 }
+
 .value_inner_row{
   margin-top:5%
 }
 
 @media screen and (max-width:680px){
-.banners{
-  margin-top:20% !important
-}
 
+  .banners{
+    margin-top:20% !important
+  }
 
-.value_divide{
-  height:0 !important;
-  width:0 !important;
-  display:inline !important;
-  position: absolute;
-  max-width:0 !important;
-  flex: 0 !important;
+  .value_divide{
+    height:0 !important;
+    width:0 !important;
+    display:inline !important;
+    position: absolute;
+    max-width:0 !important;
+    flex: 0 !important;
+  }
 
-}
   .what_we_do_title{
     font-size:3rem;
     font-weight: 700;
@@ -250,8 +264,8 @@ a:hover{
     text-align: justify;
     width:80%;
     font-family: "Montserrat";
-
   }
+
   .about_value_row{
     padding-top:0% !important;
   }
@@ -260,20 +274,23 @@ a:hover{
     width:140% !important;
     height:100vh !important;
   }
+
   .mobile-col-0{
     width:0% !important;
     max-width:0% !important;
     flex:0% !important;
-
   }
+
   .about_container{
     padding:5% 0;
     padding-bottom:7.5%;
     margin-top:5% !important;
   }
-.value_box_subtitle{
-      font-size: 1.8rem !important
-}
+
+  .value_box_subtitle{
+   font-size: 1.8rem !important
+  }
+
   .about_description{
     text-align: justify;
   }
@@ -284,8 +301,8 @@ a:hover{
 
   .about_title{
     font-size:4rem;
-
   }
+
   .what_we_do_image{
     height:100rem !important;
     width:100rem;
@@ -293,7 +310,6 @@ a:hover{
 
   .value_row{
     padding:5%;
-
     padding-top: 0% !important;
   }
 
@@ -309,16 +325,10 @@ a:hover{
     position: relative;
     bottom:2rem;
   }
+
   .value_col p {
     font-size:1.5rem !important;
-
-
-
   }
-/*
-  .intro-text-container{
-    top:80%;
-  } */
 
   .what_we_do_inner{
     position: absolute;
@@ -346,189 +356,112 @@ a:hover{
   .about_link_row{
     margin-top:15%;
   }
-.showcase_container {
-  background-position: -50% !important
-}
+
+  .showcase_container {
+    background-position: -50% !important
+  }
+
   .what_we_do_container{
     margin-top:0%;
     height:125vh !important;
     background-image: linear-gradient(to bottom right,rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, .8),rgba(0, 35, 50, .7)),url("./../images/what_we_do_new.png");
   }
+
   .what_we_do_link {
     font-size: 2rem !important;
     letter-spacing: 3px;
     text-align: center;
     margin-left: 0% !important;
-        width: 40% !important;
-}
+    width: 40% !important;
+ }
 
 }
 
 @media screen and (orientation:portrait) and (min-width:600px) and (max-width:900px){
-  .about_us_divider{
-    width:0% !important;
-    max-width:0% !important
 
+  .about_us_divider{
+    width:0% ;
+    max-width:0%
   }
+
   .about_us_col--2{
     margin-top:22.5%
   }
-  .mission_col{
-    /* margin-top:5% !important; */
-    /* padding-bottom:2%; */
 
+  .mission_col{
     margin-left:5%;
-    flex: 90% !important;
-    max-width: 90% !important;
-    width:  90% !important;
+    flex: 90% ;
+    max-width: 90% ;
+    width:  90% ;
   }
 
   .banners{
-    top: 115% !important;
-    }
+    top: 115% ;
+  }
+
   .value_box_subtitle{
     font-size:2rem;
   }
+
   .what_we_do_description{
-        width: 80%;
-        text-align: justify;
+    width: 80%;
+    text-align: justify;
   }
+
   .about_container {
     position: relative;
     padding-bottom: 15%;
     padding-top: 12.5%;
-    text-align: justify !important;
-}
+    text-align: justify ;
+  }
 
   .what_we_do_col{
-    width:75% !important;
-    max-width:75% !important;
+    width:75% ;
+    max-width:75% ;
     flex:75%;
     margin-left: 5%;
-
   }
-.brs{
-  margin-top:7.5%;
-}
-.about_us_col--2{
-  visibility: hidden;
-}
-.our_clients_text_banner{
-  width: 50% !important;
-background: none !important;
-font-size: 6rem !important;
-padding-left: 10% !important;
-border-bottom: 1px solid white;
-}
-.about_us_banner{
-    width:90% !important;
-    margin-left:5%;
-    background: none !important;
-    font-size: 6rem !important;
-    border-bottom: 1.5px solid white;
 
-}
+  .brs{
+    margin-top:7.5%;
+  }
+
+  .about_us_col--2{
+    visibility: hidden;
+  }
+
+  .our_clients_text_banner{
+    width: 50% ;
+    background: none ;
+    font-size: 6rem ;
+    padding-left: 10% ;
+    border-bottom: 1px solid white;
+  }
+
+  .about_us_banner{
+    width:90% ;
+    margin-left:5%;
+    background: none ;
+    font-size: 6rem ;
+    border-bottom: 1.5px solid white;
+  }
+
   .value_col-inner{
-    width:50% !important;
-    max-width:50% !important;
-    flex:50% !important;
+    width:50% ;
+    max-width:50% ;
+    flex:50% ;
     margin-top:5%;
   }
+
   .about_us_divider{
-    width:8.33% !important;
-    max-width:8.33% !important;
-    flex:8.33% !important;
+    width:8.33% ;
+    max-width:8.33% ;
+    flex:8.33% ;
   }
+
   .what_we_do_container{
     background-position: center;
-    background-image: linear-gradient(to right,rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, .8),rgba(0, 35, 50, .4)),url(./../images/what_we_do_new.png) !important;}
-
-@media screen and (max-width:1400px) and (min-width:1080px) and (orientation:landscape){
-
-.banners{
-  margin-top:25% ;
+    background-image: linear-gradient(to right,rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, .8),rgba(0, 35, 50, .4)),url(./../images/what_we_do_new.png) !important;
   }
 
-}
-
-/*@media screen and (orientation:landscape) and (max-width:1000px){
-  .about_container{
-     margin-top: 75% !important;
-  }
-
-  .value_inner_row{
-    margin-top:2.5%;
-  }
-
-  .landscape-col-12{
-
-      width:100% !important;
-      max-width:100% !important;
-      flex:100% !important;
-
-  }
-  .link_about{
-    font-size:18px !important;
-  }
-  .what_we_do_title{
-    font-size:45px !important;
-  }
-  .landscape-col-0{
-    width:0% !important;
-    max-width:0% !important;
-    flex:0% !important;
-  }
-  .landscape-font-16{
-    font-size:18px !important;
-  }
-  .landscape-col-3{
-
-      width:25% !important;
-      max-width:25% !important;
-      flex:25% !important;
-
-  }
-
-  .landscape-col-10{
-
-      width:83.33333% !important;
-      max-width:83.3333% !important;
-      flex:83.3333% !important;
-
-  }
-  .landscape-col-1{
-
-      width:8.3333% !important;
-      max-width:8.3333% !important;
-      flex:8.3333% !important;
-
-  }
-  .landscape-col-0{
-    width:0% !important;
-    max-width:0% !important;
-    flex:0% !important;
-  }
-
-  .description_owner{
-    margin-top:0% !important ;
-  }
-
-  .about_container{
-    padding-top:1%;
-    padding-bottom:1%;
-
-  }
-  .about_description{
-    font-size:1.8rem;
-    }
-  .about_row{
-    padding-top:2.5%;
-    padding-bottom:2.5%;
-  }
-  .value_col{
-    margin-left:2.5%;
-  }
-  .value_inner_row{
-    margin-top:2.5%;
-  }
 }
