--- a/public/assets/css/quote.css
+++ b/public/assets/css/quote.css
@@ -1,4 +1,4 @@
-.quote_input:focus{
+/* .quote_input:focus{
   outline:none !important;
 }
 .quotesheet_box{
@@ -38,7 +38,7 @@
 /* .darkbluebackg {
   height:200px !important;
 } */
-.quotesheet_title{
+/* .quotesheet_title{
   text-align: center;
   font-family: "Akrobat";
   font-size:2.5rem;
@@ -124,4 +124,4 @@
   .landscape-margin-top-0{
     margin-top:0% !important;
   }
-}
+} */ */
