--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -33,17 +33,17 @@
 
           <div class="col-4 contact_c_col mobile-col-12">
 
-            <p style="color:white;opacity:.8;font-size:1.7rem;font-weight:400;line-height:1.2">Call 480-822-0511 to ensure your windows look great!   </p>
+            <p class="contact_slogan">Call 480-822-0511 to ensure your windows look great!   </p>
             <div class="margin-top-5">
-              <p style="color:white;opacity:.8;font-size:1.7rem;font-weight:400;line-height:1.2">You can also email us at info@customfacilityservices.com </p>
+              <p class="contact_slogan contact_slogan--email">You can also email us at info@customfacilityservices.com </p>
             </div>
             <div class='margin-top-10'>
-              <p style="border:1px solid white;border-radius:20px;font-size:2rem;color:white;padding:1% 5%;text-align:center;display:inline">480-822-0511</p>
+              <p class="contact_number">480-822-0511</p>
             </div>
           </div>
       </div>
 
-      <div class="row what_we_clean_s" style="padding:2%;position:relative">
+      <div class="row what_we_clean_s" >
 
         <div class="clean_arrow clean_arrow--left clean_arrow_visible">
             <img class="clean_arrow_img clean_arrow--left" src = "./assets/images/arrow.png"style="transform:rotate(180deg)">
@@ -103,7 +103,7 @@
 
             <div class="relative">
 
-              <img class="ring width-100" src = "./assets/images/1.png"style="position:absolute;top:100%;"/>
+              <img class="ring width-100" src = "./assets/images/1.png"/>
 
               <div class="knob_s">
               <div class="knob_short_parent">
@@ -136,7 +136,7 @@
         </div>
 
       </div>
-      <div style="position:relative;padding-top:0%;margin-top:15%;border-top:1px solid white">
+      <div class="footer_contact">
         <%- include("./layout/footer.ejs") %>
       </div>
 
