--- a/public/assets/css/animations.css
+++ b/public/assets/css/animations.css
@@ -1,62 +1,140 @@
 @keyframes dropdown_nav{
+  
   0%{
     height:0px;
   }
   100%{
     height:1080px;
   }
+
+}
+
+@keyframes quote {
+
+  0%{
+    transform:scale(0)
+  }
+  100%{
+    transform: scale(1);
+  }
+
+}
+
+@keyframes slidein{
+
+  0%{
+    opacity:0;
+    left:300px;
+  }
+
+  80%{
+    opacity:.4
+    left:0px;
+  }
+  100%{
+    opacity:.8;
+    left:0px;
+  }
+
+}
+
+@keyframes turn_{
+
+  0%{
+    transform: rotateZ(0deg);
+  }
+  100%{
+    transform: rotateZ(360deg);
+
+  }
+
 }
 
 @keyframes appear{
+
   0%{
     transform:translateY(-100px);
   }
   100%{
     transform:translateY(0px);
   }
+
+}
+
+@keyframes go_up {
+
+  0%{
+    position: relative;
+    top:0px
+  }
+  100%{
+    top:-30px;
+  }
+
+}
+
+@keyframes go_down {
+
+  0%{
+    position: relative;
+    top:-30px
+  }
+  100%{
+    top:0px;
+  }
+
 }
 
 @keyframes move_text_left{
+
   0%{
     left: -1000px;
   }
   100%{
     left:0px;
   }
+
 }
 
 @keyframes text_appear{
-  0%{
 
+  0%{
+     opacity:0% !important;
+     color:#014884;
+    }
+
+  90%{
     opacity:0% !important;
-    color:#014884;
-    }
-    90%{
-      opacity:0% !important;
-    }
-  100%{
-
-      opacity:100%;
-        color:white;
   }
-}
-@keyframes coll{
-  0%{
-      height:350px;
+  100%{
     opacity:100%;
     color:white;
-    }
-    50%{
-      opacity:50%
-    }
-  100%{
-        height:0px;
-      opacity:0%;
-        color:#014884;
   }
+
+}
+
+@keyframes coll{
+
+  0%{
+    height:350px;
+    opacity:100%;
+    color:white;
+  }
+
+  50%{
+    opacity:50%
+  }
+
+  100%{
+      height:0px;
+      opacity:0%;
+      color:#014884;
+  }
+
 }
 
 @keyframes dropdown{
+
   0%{
     height:0px;
       color:#014884;
@@ -66,16 +144,19 @@
   100%{
     opacity:100%;
     height:350px;
-      color:white;
+    color:white;
   }
+
 }
 
 
 @keyframes modal_appear{
+
   0%{
     top:-100%;
   }
   100%{
     top:20%;
   }
+
 }
