--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,6 +1,7 @@
 .home_page{
   padding-bottom:75%;
 }
+
 .intro-row{
   top:65%;
   left:-5%;
@@ -11,12 +12,14 @@
   z-index: 99220009;
   margin-top:10%;
 }
+
 .home_quote_container{
   position: absolute;
   z-index:99;
   background:white;
   padding:2%;
 }
+
 .contact_info_section p{
   padding-left:5%;
 }
@@ -24,18 +27,14 @@
 .quotesheet_container{
   width:100%;
 }
+
 .quotesheet_title{
   text-align: center;
   font-family: "Akrobat";
   font-size:2.5rem;
   font-weight: bold;
 }
-.padding-bottom-small{
-  padding-bottom: 5%;
-}
-.padding-top-small{
-  padding-top:5%;
-}
+
 .quote_input_home{
   font-family: "Akrobat";
   border-radius:0px;
@@ -44,6 +43,7 @@
   font-size:2rem;
   outline:none;
 }
+
 .client_container{
   background:white;
   padding:5%;
@@ -52,6 +52,7 @@
   width:100%;
   padding-bottom:5%;
 }
+
 .quote_submit_button{
   width:100%;
   margin-top:10%;
@@ -59,67 +60,69 @@
   color:white !important;
   background:black;
 }
-.btn{
-  color:white !important;
-}
+
 .client_row{
   margin-left: 5%;
 }
+
 .our_client_banner{
   width:50%;
   text-align: center;
   font-size:4rem;
 }
-.margin-top-very-small{
-  margin-top: 2.5%;
-}
-.padding-small{
-  padding:5%;
-}
+
 .client_img{
   width:100%;
   margin-top:-5%;
 }
+
 .supportbox{
   left:10% !important;
 }
+
 .gallery_home_container{
   height:100vh;
 }
+
 .about_us_dropdown{
   width:90%;
   margin-left:5%;
   padding-left:2.5%;
   padding-top:2.5%;
   margin-top:1%;
-
 }
+
 .about_us_col--2{
   position: absolute;
-width: 50%;
-right: 0%;
-top: -20%;
+  width: 50%;
+  right: 0%;
+  top: -20%;
 }
+
 .about_us_heading{
   font-family: "Akrobat";
   font-size:2.5rem;
   padding-left:2.5%;
   color:white;
-
 }
+
 .about_us_container{
   margin-top:35%;
 }
+
 .footer_home_container{
   top:-50vh;
   position:relative;
 }
+
 .about_image{
   top:-10% !important;
 }
+
 .p_row{
   left:0%;
 }
+
 .margin-top-medium{
   margin-top:10%;
 }
@@ -129,15 +132,17 @@ top: -20%;
   left:-5%;
   height:800px;
 }
+
 .home_quote_container{
   top:25%;
   left:5%;
 }
+
 .about_us_banner{
   width:95%;
   padding-right:15%;
-
 }
+
 .big_blue_box_about_2{
   top:85%;
   left:-5%;
@@ -152,6 +157,7 @@ top: -20%;
   display: inline;
   background:#1670A4;
 }
+
 .contact_section_title{
   margin-top:5%;
   font-size:6rem;
@@ -165,13 +171,15 @@ top: -20%;
   top:10%;
   left:0%;
 }
+
 .contact_section{
-    margin-top:-2.5%;
-    padding:5%;
-    position:relative ;
-    height:25rem;
-    width:100%
-  }
+  margin-top:-2.5%;
+  padding:5%;
+  position:relative ;
+  height:25rem;
+  width:100%
+}
+
 .about_us_image{
   height:75vh;
   width:100%;
@@ -187,19 +195,15 @@ top: -20%;
   max-width:40%;
   float:left;
   display: inline;
-
   background:#2985BB;
 }
-
 
 .wave{
   height:300px;
   position: relative;
   width:100%;
   z-index:999;
-
 }
-
 
 .our_work_section{
   width:105%;
@@ -217,9 +221,11 @@ top: -20%;
   background:url("./../images/wave.png");
   background-repeat:no-repeat;
 }
+
 .our_clients_container{
   margin-top:-5%;
 }
+
 .showimg{
   height:100%;
   height:600px;
@@ -291,32 +297,34 @@ top: -20%;
   visibility: visible;
   animation: .5s ease-in dropdown 1;
 }
+
 .contact_info_section--number {
   display:block;
   padding:1%;
   font-weight: normal !important;
-    letter-spacing: 5px !important;
+  letter-spacing: 5px !important;
   text-align:left;
   width:50%;
   font-size: 4.5rem ;
-font-family: "montserrat";
-font-weight: 500;
-width:50% !important;
-text-align: left !important;
-padding-left: 5% !important;
+  font-family: "montserrat";
+  font-weight: 500;
+  width:50% !important;
+  text-align: left !important;
+  padding-left: 5% !important;
+}
 
-}#hq{
+#hq{
   position: absolute;
   top:70%;
   left:5%;
   width:80%;
 }
+
 .contact_section p{
   padding-left:5% !important;
-
 }
-.contact_info_section{
 
+.contact_info_section{
   padding:2.5% 0;
   line-height:1.5;
   background:white;
@@ -333,42 +341,46 @@ padding-left: 5% !important;
   transform: scale(1);
   animation: quote 1 ease-in .5s;
 }
+
 .quote_submit_button{
   height:7.5vh;
   font-size:2rem;
   font-family: "Akrobat"
 }
+
 .footer_wrapper_home{
-  margin-top:40%; z-index:9999;position:relative
+  margin-top:40%;
+  z-index:9999;
+  position:relative
 }
+
 .wavy_section{
   bottom: 50px;
-position: relative;
-width:100%;
+  position: relative;
+  width:100%;
 }
 
 .our_work_section{
   background:white;
   position:relative;
 }
+
 .dropdown_text{
   font-family: "Akrobat";
   font-size:2rem;
-
 }
+
 .about_us_link{
   padding-top:2.5%;
   font-family: "Akrobat";
   text-align: center;
   font-size:2.5rem;
-
   color:white;
-
 }
+
 .about_us_button{
   padding:2%;
   width:90%;
-
   text-align: center;
   margin-top:10%;
   margin-left:5%;
@@ -378,24 +390,24 @@ width:100%;
   z-index:9999
 }
 
-
-
 .contact_info_section--email{
   font-size: 5rem ;
   font-weight: normal !important;
-    letter-spacing: 2px !important;
-font-family: "montserrat";
-font-weight: 500;
-font-weight: normal;
-    letter-spacing: 5px;
-width:70% !important;
-text-align: left !important;
-padding-left: 5% ;
+  letter-spacing: 2px !important;
+  font-family: "montserrat";
+  font-weight: 500;
+  font-weight: normal;
+  letter-spacing: 5px;
+  width:70% !important;
+  text-align: left !important;
+  padding-left: 5% ;
 }
+
 .dropdown_arrow{
   width:50%;
   margin-left:25%;
 }
+
 .dropdown_container{
   padding-bottom:5%;
   margin-top:2.5%;
@@ -410,18 +422,22 @@ padding-left: 5% ;
   height:50vh;
   width:100%;
 }
+
 .gallery_img--big{
   height:100vh;
   width:100%;
 }
 
 .gallery_row--2{
-  position:relative;top:-50vh
+  position:relative;
+  top:-50vh
 }
 
 .gallery_row--3{
-  position:relative;top:-50vh
+  position:relative;
+  top:-50vh
 }
+
 .our_client_banner{
   font-family: "montserrat";
   font-weight: 500;
@@ -431,6 +447,7 @@ padding-left: 5% ;
   width:45% !important;
   text-align: left !important;
 }
+
 .contact_section_title{
   font-family: "montserrat";
   font-weight: 500;
@@ -441,19 +458,16 @@ padding-left: 5% ;
   text-align: left ;
   padding-left: 5% ;
 }
-@keyframes quote {
-  0%{
-    transform:scale(0)
-  }
-  100%{
-    transform: scale(1);
-  }
-}
+
+
 @media screen and (min-width:601px) and (max-width:900px) and (orientation:landscape){
+
   .about_us_col--2{
     margin-top:20% !important;
   }
+
 }
+
 @media screen and (max-width:490px) and (orientation:portrait){
 
   .form_col--inner{
@@ -461,13 +475,11 @@ padding-left: 5% ;
     max-width:100%;
     flex:100%;
   }
+
   .about_us{
     margin-top:125% !important;
   }
-  /* .banners{
-    width: 120%;
-    top: 80% !important;
-  } */
+
   .contact_section{
     height:25vh !important;
   }
@@ -476,33 +488,41 @@ padding-left: 5% ;
     width:90%;
     margin-left:5%;
   }
+
   .about_us_heading{
     font-size: 3rem;
   }
+
   .about_us_button{
     margin-top:5%;
   }
+
   .desktop_only{
     visibility: hidden;
     height:0px;
     width:0px;
   }
+
   .wave{
     width:105%;
   }
+
   .our_work_section{
     width:100%;
     right:0px;
     padding-bottom: 30%;
   }
+
   .contact_section{
     margin-top:20%;
   }
+
   .our_client_banner{
     font-size:2.5rem;
     width:80%;
     text-align: center;
   }
+
   .contact_section_title {
     margin-top:12.5%;
     width:95% !important;
@@ -514,401 +534,254 @@ padding-left: 5% ;
     width: 70% !important;
     font-weight: normal;
     letter-spacing: 5px;
-}
-.contact_info_section--email {
-  font-size: 2.2rem !important;
-  width: 95% !important;
-}
+  }
+
+  .contact_info_section--email {
+    font-size: 2.2rem !important;
+    width: 95% !important;
+  }
+
   .gallery_img{
     height:25vh !important;
     width:100%;
   }
+
   .gallery_img--big{
     height:50vh !important;
     width:100%;
   }
+
   .our_clients_col--left{
     left:-20%;
   }
+
   .new_our_clients_container{
     margin-top:0%;
   }
+
   .about_us_row{
     margin-top:120%;
   }
+
   .contact_section_bluebox{
     height:50rem;
     margin-top:-15%;
   }
-}
 
+}
 
 @media screen and (max-width: 900px) and (min-width:600px) and (orientation: portrait) {
-.about_us_row{
-  margin-top:45% !important;
-  margin-left:5%;
-  width:90% !important;
-
-}
-.home_quote_container{
-  width:90%;
-}
-
-.gallery_img{
-  height:25vh !important;
-  width:100%;
-}
-.gallery_img--big{
-  height:50vh !important;
-  width:100%;
-}
-.gallery_home_container{
-  height:0;
-}
-.contact_section{
-  height:45vh;
-      margin-top: -30% !important;
-}
-.about_us_image {
-    height: 45vh;
-    width: 100%;
-    position: absolute;
-    top: 5%;
-    left: -10%;
-}
-
-.contact_section p {
-    margin-top: 30%;
-    padding-left: 5% !important;
-}
-.contact_section_bluebox {
-    top: 5;
-    left: -5%;
-    height: 300px;
-    z-index: -1;
-    width: 30%;
-    top: 30%;
-    height: 80%;
-    position: absolute;
-}
-.our_clients_col--main_ {
-    z-index: 999 !important;
-    transform: scale(1.05) translateX(25%);
-    transition: all 1s;
-}
-.our_clients_col--right {
-    z-index: 9 !important;
-    transform: scale(1) translateX(115%);
-    transition: all 1s;
-}
-.our_clients_col--left {
-    z-index: 9 !important;
-    transform: scale(1) translateX(-5%);
-    transition: all 1s;
-}
-.our_clients_col--left_ {
-    z-index: 9 !important;
-    transform: scale(1) translateX(-5%);
-    transition: all 1s;
-}
-.about_us_heading{
-  font-size:2.7rem !important;
-}
-.our_clients_col--main {
-    z-index: 999 !important;
-    transform: scale(1.05) translateX(25%);
-    transition: all 1s;
-}
-
-.about_us_overlay_box--big {
-    position: absolute;
-    height: 42.5vh;
-    visibility: visible;
-    left:251%;
-    top:20%;
-    width: 100%;
-    margin-top: -5%;
-    margin-left: -15%;
-
-    max-width: 100%;
-    float: left;
-    display: inline;
-    background: #2985BB;
-}
-.our_clients_col {
-    height: 100%;
-    width: 70%;
-    position: absolute;
-    top: 0;
-}
-.our_clients_col {
-    width:60%;
-}
-.new_our_clients_row {
-    position: relative;
-    height: 55vh;
-    margin-top: 15%;
-}
-.about_us_link {
-    padding-top: 2.5%;
-    font-family: "Akrobat";
-    text-align: center;
-    font-size: 3rem;
-    color: white;
-}
-.about_us_image{
-  margin-left:10%
-}
-.about_us_overlay_box {
-    height: 50vh;
-    visibility: hidden;
-    width: 70%;
-    margin-top: 10%;
-    max-width: 70%;
-    float: left;
-    display: inline;
-    background: #2985BB;
-}
-.about_us_col {
-    margin-left: 5%;
-    width: 90% !important;
-    max-width: 90% !important;
-    flex: 90% !important;
-}
-.no_col{
-  width:0% !important;
-  max-width:0% !important;
-  flex:0% !important
-
-}
-.about_us_overlay_box {
-    height: 50vh;
-    max-width: 60%;
-    float: left;
-    width: 60%;
-    margin-top: 10%;
-    display: inline;
-    background: #1670A4;
-}
-
-}
-/* @media screen and (max-width:490px){
   .about_us_row{
-    margin-top:110% !important;
-  }
-  .new_our_clients_container{
-    margin-top:-2% !important;
-  }
-  .contact_section_title{
-    margin-top:25% !important;
-  }
-  .meet_owners_container {
-    margin-top: 12.5% !important;
-  }
-  .buttons_t{
-    margin-top:5%;
-    margin-left:6%;
-  }
-  .contact_section{
-    height:35vh !important;
-  }
-  .contact_info_section--email{
-    font-weight: normal !important;
-  }
-  .contact_info_section {
-    padding:10% 0%;
-  }
-  .contact_info_section--number{
-    font-weight: normal !important;
-  }
-  .contact_section_bluebox{
-    z-index: -1 !important;
-    width: 50% !important;
-    top: 75% !important;
-  }
-} */
-
-/*
-
-@media screen and (max-width:1000px){
-.contact_us_con{
-  margin-top:5% !important;
-}
-.our_work_section{
-  margin-top:35%;
-}
-  .mobile-margin-top-20-neg{
-    width:110% !important;
-    margin-top: -90% !important;
-    position: relative;
-    z-index: 9999;
-  }
-  .showimg{
-    height:275px !important;
-  }
-  .footer_wrapper_home{
-    margin-top:75% !important;
-  }
-
-  .active-dropdown{
-    height:300px !important;
-  }
-
-  .intro-form-container{
-    margin-left:-5% !important;
-  }
-
-   .about-us-title{
-    line-height: 70px !important;
-  }
-
-  .wave:before{
-    content: "";
-    position: absolute;
-    z-index: 0 !important;
-    width: 200% !important;
-    bottom: 40% !important;
-    height: 300px !important;
-    background-size: cover !important;
-    background-repeat: no-repeat !important;
-  }
-
-  .contact_section{
-    height:200px !important;
-  }
-
-  .supportbox{
-    right: 0%;
-    height: 500px;
-    top: 15%;
-  }
-
-  .showimg{
-    margin-top:72% !important;
-  }
-
-  .titleshow{
-    top: 5%;
-    left: 0%;
-  }
-
-  .titleshow2{
-    right: 0%;
-    top: 15%;
-  }
-
-  .quotebutton{
-    top: 35%;
-    right: 0%;
-  }
-
-  .our_work_title{
-    margin-top: -70%;
-  }
-
-  .intro-form-container{
-    width:120% !important;
+    margin-top:45% !important;
+    margin-left:5%;
+    width:90% !important;
   }
 
   .home_quote_container{
-    top: 325%;
-    left: 10%;
-
-  }
-
-  .our_clients_title{
-    margin-top: -75% !important;
-
-  }
-
-  .about_us{
-    margin-top:235% !important;
-  }
-  .showcase_client{
-    height:200px !important;
-  }
-  .mobile_text_banner_out_clients{
-    left: -0%;
-        margin-left: 35%;
-    text-align:center !important;
-    width:100% !important;
-    font-size: 40px;
-    position: absolute;
-
-  }
-  .client_row{
-    padding-left:10% !important;
-  }
-  .mobile_text_banner_out_clients{
-    font-size:45px !important;
-  }
-  .our_clients_container{
-    margin-top:-20%;
-  }
-  .contact_us_title{
-    font-size:3.5rem;
-    width:100%;
-    text-align:center;
-    margin-top:10%;
-  }
-  .contact_info_section--number{
-    margin-top:-5%;
-    width:80%;
-    font:2.5rem;
-  }
-  .contact_info_section--email{
-    margin-top:-5%;
     width:90%;
-    font:2rem;
-
-  }
-  .value_row{
-    margin-top:10%;
-  }
-  .values_row_heading{
-    font-size:3rem;
   }
 
-.text_about_us_link{
-  font-size:2rem;
+  .gallery_img{
+    height:25vh !important;
+    width:100%;
+  }
+
+  .gallery_img--big{
+    height:50vh !important;
+    width:100%;
+  }
+  .gallery_home_container{
+    height:0;
+  }
+  .contact_section{
+    height:45vh;
+        margin-top: -30% !important;
+  }
+  .about_us_image {
+      height: 45vh;
+      width: 100%;
+      position: absolute;
+      top: 5%;
+      left: -10%;
+  }
+
+  .contact_section p {
+      margin-top: 30%;
+      padding-left: 5% !important;
+  }
+
+  .contact_section_bluebox {
+      top: 5;
+      left: -5%;
+      height: 300px;
+      z-index: -1;
+      width: 30%;
+      top: 30%;
+      height: 80%;
+      position: absolute;
+  }
+
+  .our_clients_col--main_ {
+      z-index: 999 !important;
+      transform: scale(1.05) translateX(25%);
+      transition: all 1s;
+  }
+
+  .our_clients_col--right {
+      z-index: 9 !important;
+      transform: scale(1) translateX(115%);
+      transition: all 1s;
+  }
+
+  .our_clients_col--left {
+      z-index: 9 !important;
+      transform: scale(1) translateX(-5%);
+      transition: all 1s;
+  }
+
+  .our_clients_col--left_ {
+      z-index: 9 !important;
+      transform: scale(1) translateX(-5%);
+      transition: all 1s;
+  }
+
+  .about_us_heading{
+    font-size:2.7rem !important;
+  }
+
+  .our_clients_col--main {
+      z-index: 999 !important;
+      transform: scale(1.05) translateX(25%);
+      transition: all 1s;
+  }
+
+  .about_us_overlay_box--big {
+      position: absolute;
+      height: 42.5vh;
+      visibility: visible;
+      left:251%;
+      top:20%;
+      width: 100%;
+      margin-top: -5%;
+      margin-left: -15%;
+      max-width: 100%;
+      float: left;
+      display: inline;
+      background: #2985BB;
+  }
+
+  .our_clients_col {
+      height: 100%;
+      width: 70%;
+      position: absolute;
+      top: 0;
+  }
+
+  .our_clients_col {
+      width:60%;
+  }
+
+  .new_our_clients_row {
+      position: relative;
+      height: 55vh;
+      margin-top: 15%;
+  }
+
+  .about_us_link {
+      padding-top: 2.5%;
+      font-family: "Akrobat";
+      text-align: center;
+      font-size: 3rem;
+      color: white;
+  }
+
+  .about_us_image{
+    margin-left:10%
+  }
+
+  .about_us_overlay_box {
+      height: 50vh;
+      visibility: hidden;
+      width: 70%;
+      margin-top: 10%;
+      max-width: 70%;
+      float: left;
+      display: inline;
+      background: #2985BB;
+  }
+
+  .about_us_col {
+      margin-left: 5%;
+      width: 90% !important;
+      max-width: 90% !important;
+      flex: 90% !important;
+  }
+
+  .no_col{
+    width:0% !important;
+    max-width:0% !important;
+    flex:0% !important
+  }
+
+  .about_us_overlay_box {
+      height: 50vh;
+      max-width: 60%;
+      float: left;
+      width: 60%;
+      margin-top: 10%;
+      display: inline;
+      background: #1670A4;
+  }
+
 }
-} */
+
 
 @media screen and (max-width:1400px) and (min-width:1080px) and (orientation:landscape){
-.our_work_section{
-margin-top:25% !important;
-}
+
+  .our_work_section{
+    margin-top:25% !important;
+  }
 
 }
+
 @media screen and (max-width:844px ) and (orientation:landscape){
 
-.contact_section_title{
-  margin-top: 7.5%;
-}
-.our_clients_col{
-  height:140% !important;
-}
-.contact_section{
-  margin-top: 10% !important;
-}
-.contact_section_bluebox {
-  margin-top:5%;
-}
-.our_client_buttons{
-  top: 170% !important;
-}
-.main_box_paragraph{
-  font-size:1rem;
-}
-.main_box_heading{
-  font-size:1.5rem !important;
-}
+  .contact_section_title{
+    margin-top: 7.5%;
+  }
+
+  .our_clients_col{
+    height:140% !important;
+  }
+
+  .contact_section{
+    margin-top: 10% !important;
+  }
+
+  .contact_section_bluebox {
+    margin-top:5%;
+  }
+
+  .our_client_buttons{
+    top: 170% !important;
+  }
+
+  .main_box_paragraph{
+    font-size:1rem;
+  }
+
+  .main_box_heading{
+    font-size:1.5rem !important;
+  }
+
   .about_us_row{
-        margin-top: 55% !important;
+    margin-top: 55% !important;
   }
+
   .our_clients_overlay{
-        height: 150% !important;
+    height: 150% !important;
   }
+
   .cfs-heading-container {
     width:140% !important;
   }
