--- a/public/assets/css/icon-font.css
+++ b/public/assets/css/icon-font.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+@font-face { font-family: Akrobat; font-weight: normal; src: url('./../fonts/Akrobat-Black.otf'); }
+@font-face { font-family: Akrobat; font-weight: lighter; src: url('./../fonts/Akrobat-Light.otf'); }
+
 @font-face {
   font-family: "linea-basic-10";
   src:url("fonts/linea-basic-10.eot");
@@ -27,6 +30,7 @@
 
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
+
   font-family: "linea-basic-10" !important;
   font-style: normal !important;
   font-weight: normal !important;
