--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -149,6 +149,6 @@
 
   </div>
 
-
-<script src = "./assets/js/steps.js"></script>
+  <script src = "./assets/js/steps_data.js"></script>
+  <script src = "./assets/js/steps.js"></script>
   <%- include("./layout/end.ejs") %>
