--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -4,9 +4,7 @@
 
           <div class="overlay_container relative z-9"></div>
 
-          <div class="row">
-              <div class="col-12 padding-2 background-1a"></div>
-          </div>
+          <%- include("./layout/navbar.ejs") %>
 
           <p class="admin_home_title  font-20 akrobat margin-left-2_5 bold margin-top-5" > Overview </p>
 
