--- a/views/admin/layout/head.ejs
+++ b/views/admin/layout/head.ejs
@@ -28,6 +28,8 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/animations.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/home.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/admin_home.css" />
+    <link rel="stylesheet" type="text/css" href="./../assets/css/admin_navbar.css" />
+
     <link rel="stylesheet" type="text/css" href="./assets/css/top_clients.css" />
     <link rel="stylesheet" type="text/css" href="./../assets/css/util.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/util_mobile.css" />
