--- a/views/admin/layout/labor/labor_boxes.ejs
+++ b/views/admin/layout/labor/labor_boxes.ejs
@@ -1,9 +1,9 @@
 <div class="row padding-2_5">
 
     <div class="col-2">
-        <div class="width-100 add_box add_box_schedule"  id="addUser" >
-            <img class="width-50 margin-left-25" src = "./../assets/images/add.png" />
-            <p class="akrobat text-center font-20 color-ea" > Add New Laborer </p>
+        <div class="width-100 add_box add_box_schedule "  id="addUser" >
+            <img class="width-50 margin-left-25 margin-top-15 filter-black" src = "./../assets/images/add.png" />
+            <p class="akrobat text-center font-20 add_labor_name" > Add New Laborer </p>
        </div>
     </div>
 
@@ -15,9 +15,9 @@
 
           <div class="col-2">
 
-                <div class="width-100 add_box add_box_big add_box_big_active add_box_schedule" " style="background:<%=people[i].color %>">
+                <div class="width-100 add_box add_box_big add_box_big_active add_box_schedule cfs-background" >
                   <img class="width-100 " src = "./../assets/images/profile.png" />
-                  <p class="akrobat text-center font-20 color-ea"><%= people[i].name %> </p>
+                  <p class="akrobat text-center labor_name"><%= people[i].name %> </p>
                 </div>
 
           </div>
@@ -26,9 +26,9 @@
 
          <div class="col-2">
 
-             <div class="width-100 add_box add_box_big add_box_schedule"  style="opacity:.5;background:<%=people[i].color %>">
+             <div class="width-100 add_box add_box_big add_box_schedule add_box_big_inactive" >
                  <img class="width-100 " src = "./../assets/images/profile.png" />
-                 <p class="akrobat text-center font-20 color-ea "><%= people[i].name %> </p>
+                 <p class="akrobat text-center labor_name "><%= people[i].name %> </p>
             </div>
 
          </div>
