--- a/views/admin/layout/quotes/total_quotes.ejs
+++ b/views/admin/layout/quotes/total_quotes.ejs
@@ -1,5 +1,5 @@
 
-<div class="row">
+<div class="row padding-bottom-5">
 
 
   <div class="col-12">
@@ -11,7 +11,7 @@
 
   </div>
 
-  <div class="col-12 margin-top-20">
+  <div class="col-12 margin-top-10">
       <div class="text_quote_box width-100">
           <p class="title_quote"> Potential Sales </p>
           <p class="subtitle_quote">$<%=total_potential_sales %> </p>
