--- a/views/admin/quote.ejs
+++ b/views/admin/quote.ejs
@@ -2,9 +2,7 @@
 
   <div class="container-fluid relative">
 
-          <div class="row">
-              <div class="col-12 padding-2 background-1a"></div>
-          </div>
+            <%- include("./layout/navbar.ejs") %>
 
           <p class="admin_home_subtitle akrobat font-20 bold margin-left-15 margin-top-2_5 padding-left-2_5 "> Online Quotes </p>
 
