--- a/views/admin/schedule_detail.ejs
+++ b/views/admin/schedule_detail.ejs
@@ -2,11 +2,10 @@
   <%- include("./layout/labor/add_laborer.ejs") %>
   <%- include("./layout/labor/edit_schedule_modal.ejs") %>
 
-    <div class="row">
-          <div class="col-12 padding-2 background-1a"></div>
-    </div>
+  <%- include("./layout/navbar.ejs") %>
 
-    <div class="margin-top-15">
+
+    <div class="margin-top-0">
       <%- include("./layout/labor/labor_boxes.ejs") %>
     </div>
 
