--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -38,7 +38,7 @@
               <p class="contact_slogan contact_slogan--email">You can also email us at info@customfacilityservices.com </p>
             </div>
             <div class='margin-top-10'>
-              <p class="contact_number">480-822-0511</p>
+              <a href="/#hq"><p class="contact_number">Get a Free Quote Today!</p></a>
             </div>
           </div>
       </div>
@@ -58,16 +58,16 @@
 
             <div class="progress_container" >
 
-              <div class="clean_bubble_ clean_bubble_active" ><p>1</p></div>
+              <div class="clean_bubble_ clean_bubble_active" ><p class="clean_bubble_text">1</p></div>
               <div class="what_we_clean_line clean_line_active" ></div>
 
-              <div class="clean_bubble clean_bubble--2" > <p> 2</p></div>
+              <div class="clean_bubble clean_bubble--2" > <p class="clean_bubble_text"> 2</p></div>
               <div class="what_we_clean_line"></div>
 
-              <div class="clean_bubble clean_bubble--3" ><p>3</p></div>
+              <div class="clean_bubble clean_bubble--3" ><p class="clean_bubble_text">3</p></div>
               <div class="what_we_clean_line"></div>
 
-              <div class="clean_bubble clean_bubble--4"><p>4</p></div>
+              <div class="clean_bubble clean_bubble--4"><p class="clean_bubble_text">4</p></div>
 
           </div>
 
