--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -29,7 +29,8 @@
 
 .ring{
   position:absolute;
-  top:100%;
+  top:105%;
+
 }
 
 .steps_list_ {
@@ -79,7 +80,7 @@
 }
 
 .knob_line_short{
-  width:1px;
+  width:2px;
   left:50%;
   height:50px;
   position:relative
@@ -110,11 +111,11 @@
 .knob_short_parent{
   animation: infinite 20s ease-in turn_;
   transform: rotateZ(360deg);
-  position:relative;top:150px;
-  left:45.5%;
+  position:relative;top:135px;
+  left:45%;
   background:white;
-  height:10px
-  ;width:10px;
+  height:10px;
+  width:10px;
   border-radius:50%
 }
 
@@ -123,8 +124,8 @@
   animation: infinite 10s ease-in turn_;
   transform: rotateZ(360deg);
   position:absolute;
-  top:150px;
-  left:45.5%;
+  top:135px;
+  left:45%;
   background:white;
   height:10px;
   width:10px;
@@ -155,15 +156,10 @@
 }
 
 .clean_arrow_visible:hover{
-  background:white;
   transition: all .3s;
-  background:white !important;
-  box-shadow:0px 0px 0px 20px black;
+  box-shadow:0px 0px 10px 10px rgba(0,0,0,.2);
 }
 
-.clean_arrow_visible:hover img{
-  filter:brightness(0);
-}
 
 .clean_arrow--right{
   right:0%;
@@ -205,7 +201,7 @@
 }
 
 .knob_s{
-  top:40px;
+  top:-20px !important;
   right:-10px;
   position:relative
 }
@@ -221,7 +217,7 @@
 }
 
 .clock_col{
-  margin-top: 5%;
+  margin-top: -5%;
 }
 
 .text_clock_title{
@@ -321,15 +317,38 @@
   opacity:.5
 }
 
-.clean_bubble_ p{
-  font-size:2rem;
-  color:white;
+.clean_bubble_text{
+  font-size:2rem !important;
+  color:white !important;
   transition: all .5s;
-  text-align:center;
+  text-align:center !important;
   margin-top:-10%;
   opacity:0;
 }
+.clean_bubble_active .clean_bubble_text{
+  opacity:1 !important;
+  color:black !important;
 
+
+}
+.contact_slogan{
+  color:white;
+  font-size:17px;
+  font-family:"montserrat";
+  width:100%;
+  text-align: left;
+}
+.clean_bubble_active{
+  opacity:1;
+}
+.contact_number{
+  transition: all .5s;
+  padding:10px;
+}
+.contact_number:hover{
+  background:white;
+  color:black;
+}
 /*Ipad Landscape */
 @media screen and (max-width:1400px) and (min-width:1080px) and (orientation:landscape){
 
