--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -42,6 +42,8 @@
             </div>
           </div>
       </div>
+      <p class="progress_clean"> What We Clean </p>
+
 
       <div class="row what_we_clean_s" >
 
@@ -52,9 +54,10 @@
             <img class="clean_arrow_img clean_arrow--right " src = "./assets/images/arrow.png"/>
         </div>
 
-        <div class="col-7 mobile-col-12">
 
-            <p class="progress_clean"> What We Clean </p>
+
+        <div class="col-7 mobile-col-12 desktop_only">
+
 
             <div class="progress_container" >
 
@@ -72,7 +75,7 @@
           </div>
 
         </div>
-        <div class="col-4 mobile-col-12">
+        <div class="col-4 mobile-col-12 ">
           <div class="steps_box">
              <p class="steps_title">1.Window Panes </p>
 
